feat: shared team inbox supports images, video, document, audio and sticker messages too now (#17)
